corpus/c/syntax/case-02/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:2:17: error: [syntax] expected expression before ';' token
want: expression
near: ; token
| src/main.c:2:17
|     int value = ;
|                 ^